# chuck-mcp-layering-lab

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile.frontend  FRONTEND_FIXES.md  README.md  TESTING.md  apply_optimizations.py  auto_optimize.py  colorsep-boot.sh  docker-compose.local.yml  docker-compose.yml  fix-bashrc.sh  fix_time_import.py  gpu_config.py  main.py  patch_main.py  playwright.config.ts  profile_test.py  pyproject.toml  sentry.client.config.ts  sentry.server.config.ts  separate_v20.py  test_perf_v20.py  test_performance.py  wsl-bootstrap.sh  wsl-bulk-rsync.sh  wsl-finish-rsync.sh  wsl-install-tools.sh  wsl-seed-ssh.sh  wsl.conf.new
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backend/: auto_optimize.py  color_names.py  conftest.py  job_routes.py  main.py  patch_main.py  patch_v20.py  separate_v10.py  separate_v11.py  separate_v12.py  separate_v13.py  separate_v14.py  separate_v15.py  separate_v16.py  separate_v17.py  separate_v18.py  separate_v19.py  separate_v2.py  separate_v20.py  separate_v5.py  separate_v6.py  separate_v7.py  separate_v8.py  separate_v9.py  serverless_handler.py  svg_generator.py  svg_postprocess.py  test_performance.py  text_detect.py
chuck_mcp_v2/: __init__.py  pigment_library_emma.yaml  plan_emma.py  types.py
color-separator/: constants.ts  page.tsx
corpus/: .gitattributes  README.md
docs/: audit-brief-for-external-llm-2026-05-16.md  audit-response-and-reconstruction-plan-2026-05-17.md  layering-lab-build-plan.md  output-archive-2026-05-16.md  reconstruction-plan-2026-05-16.md  (+3 more)
(+511 files in other folders)
